chore: prepare project for Vercel deployment

--- a/.vercelignore
+++ b/.vercelignore
@@ -1,10 +1,10 @@
 # Dependency directories
 node_modules/
 
-# Build output
-dist/
+# Source files (already compiled to dist/)
+src/
 
-# Environment variables
+# Local development files
 .env
 .env.local
 .env.*.local
@@ -29,6 +29,9 @@ yarn-error.log*
 .DS_Store
 Thumbs.db
 
+# Git related
+.git/
+
 # Firebase
 firebase-debug.log
 firebase-debug.*.log
@@ -39,4 +42,3 @@ dump.rdb
 
 # Misc
 .misc/
-.vercel
